--- a/SampleCode/Sherweb.SampleCode.csproj
+++ b/SampleCode/Sherweb.SampleCode.csproj
@@ -8,11 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Sherweb.Apis.Authorization" Version="1.0.0" />
     <PackageReference Include="Sherweb.Apis.Distributor" Version="1.1.0" />
-    <PackageReference Include="Sherweb.Apis.ServiceProvider" Version="1.0.0-beta01" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\NugetPackagesSourceCode\Sherweb.Apis.ServiceProvider\Sherweb.Apis.ServiceProvider.csproj" />
+    <PackageReference Include="Sherweb.Apis.ServiceProvider" Version="1.0.0-alpha3" />
   </ItemGroup>
 
 </Project>
